<resources>
    <string name="app_name" translatable="false">TESL Tracker</string>
    <string name="app_name_full" translatable="false">TES Legends Tracker</string>
    <string name="app_deeplink_scheme" translatable="false">e2s</string>
    <string name="app_deeplink_host" translatable="false">tesltracker</string>
    <string name="app_deeplink_path_basic" translatable="false">basic</string>
    <string name="app_deeplink_path_arena" translatable="false">arena</string>
    <string name="app_deeplink_path_articles" translatable="false">articles</string>
    <string name="app_deeplink_path_card" translatable="false">card</string>
    <string name="app_deeplink_path_token" translatable="false">token</string>
    <string name="app_deeplink_path_spoiler" translatable="false">spoiler</string>
    <string name="app_deeplink_path_search" translatable="false">search</string>
    <string name="app_deeplink_path_season" translatable="false">seasons</string>
    <string name="app_deeplink_path_page" translatable="false">page</string>
    <string name="app_deeplink_path_update" translatable="false">update</string>
    <string name="app_deeplink_path_wabbatrack" translatable="false">wabbatrack</string>
    <string name="app_ads_card_list_size" translatable="false">280x80</string>
    <string name="app_ads_deck_list_size" translatable="false">280x80</string>
    <string name="app_ads_new_deck_card_list_size" translatable="false">220x50</string>
    <string name="app_ads_match_history_list_size" translatable="false">280x80</string>
    <string name="app_ads_news_list_size" translatable="false">280x80</string>
    <string name="app_ads_season_list_size" translatable="false">280x80</string>
    <string name="app_exit_confirm">Press again to exit</string>
    <string name="app_bd_under_updating">TESL Tracker database is under update. You will be notified when it is completed.</string>
    <string name="app_version_unsupported">This TESL Tracker version became unsupported. Please update to continue using the app.</string>
    <string name="app_donate_dialog_text">All app features are free, but if you want to support development, you can donate some value and stay free of ads.</string>
    <string name="app_donate_dialog_value">Donate %1$s</string>
    <string name="app_donate_dialog_not_now">Not now, thanks</string>
    <string name="app_donate_dialog_payment_error">Service unavailable</string>
    <string name="app_donate_dialog_payment_fail">Donate fail, please try again.</string>
    <string name="app_donate_dialog_payment_success">Thanks for donate. Enjoy the app free of ads.</string>
    <string name="app_new_version_available">New version available!</string>
    <string name="app_new_version_message">Keep your app updated for new features and improvements!</string>
    <string name="app_new_version_update_now">Update Now</string>
    <string name="app_new_version_update_later">Later</string>
    <string name="app_warning">This app don\'t connect with your game account. User data like collection and matches needs manual input.</string>
    <string name="title_changelog" translatable="false">ChangeLog</string>
    <string name="playstore_url_format" translatable="false">http://play.google.com/store/apps/details?id=%s</string>
    <string name="wabbatrack_url" translatable="false">https://edipo2s.github.io/WabbaTrack/</string>
    <string name="wabbatrack_video_url" translatable="false">https://www.youtube.com/watch?v=zw0o0QVhkow</string>
    <string name="jsoup_user_agent" translatable="false">Mozilla/5.0 (Windows; U; WindowsNT 5.1; en-US; rv1.8.1.6) Gecko/20070725 Firefox/2.0.0.6</string>
    <string name="jsoup_referrer" translatable="false">http://www.google.com</string>
    <string name="menu_basics">Basic Info</string>
    <string name="menu_cards">Cards</string>
    <string name="menu_decks">Decks</string>
    <string name="menu_matches">Matches</string>
    <string name="menu_arena">Arena Draft</string>
    <string name="menu_spoiler">New Set</string>
    <string name="menu_spoiler_widget" translatable="false">Spoiler</string>
    <string name="menu_articles">TESL Articles</string>
    <string name="menu_seasons">TESL Seasons</string>
    <string name="menu_season">Seasons</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_donate">Ads Version</string>
    <string name="menu_donate_done">No Ads Version</string>
    <string name="menu_wabbatrack" translatable="false">WabbaTrack</string>
    <string name="menu_share">Invite a Friend</string>
    <string name="menu_about">About</string>
    <string name="menu_language">Language</string>
    <string name="menu_search">Search</string>
    <string name="menu_sets">Sets</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_statistics_warning">Cards with alternative art are excluded</string>
    <string name="menu_compact_view">Compact View</string>
    <string name="menu_only_favorite">Only Favorite</string>
    <string name="menu_only_private">Only Private</string>
    <string name="menu_only_collection">Only from Collection</string>
    <string name="menu_hide_empty">Hide Empty</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_unfavorite">Unfavorite</string>
    <string name="menu_like">Like</string>
    <string name="menu_unlike">Unlike</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_done">Done</string>
    <string name="menu_percent">Percent</string>
    <string name="menu_import">Import from Legends-Decks</string>
    <string name="menu_start">Start</string>
    <string name="menu_wallpaper">Wallpaper</string>
    <string name="menu_video">Watch</string>
    <string name="menu_download">Download</string>
    <string name="menu_ringtone_play">Set play as ringtone</string>
    <string name="menu_ringtone_attack">Set attack as ringtone</string>
    <string name="menu_ringtone_extra">Set extra as ringtone</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="share_with">Share with…</string>
    <string name="share_text">Manage your TES Legends collection, search and create public or private decks to track your matches</string>
    <string name="about_language_warning">Cards image will stay in english</string>
    <string name="about_language_english" translatable="false">English</string>
    <string name="about_language_portuguese" translatable="false">Portuguese</string>
    <string name="about_language_spanish" translatable="false">Spanish</string>
    <string name="about_language_german" translatable="false">German</string>
    <string name="about_language_russian" translatable="false">Russian</string>
    <string name="about_language_italian" translatable="false">Italian</string>
    <string name="about_language_french" translatable="false">French</string>
    <string name="about_title">About TES Legends Tracker</string>
    <string name="about_text">TES Legends Tracker is a assistant app for card game The Elder Scroll Legends developed by Dire Wolf Digital and published by Bethesda Softworks.</string>
    <string name="about_text_bottom">Dire Wolf Digital has all rights reserved of all cards images and other game resource in this app.</string>
    <string name="about_info_version">App Version:</string>
    <string name="about_info_developer_label">Developer:</string>
    <string name="about_info_developer" translatable="false">Édipo Souza (edipo2s)</string>
    <string name="about_info_developer_link" translatable="false">https://twitter.com/Edipo2s</string>
    <string name="about_info_thanks_label">Special Thanks:</string>
    <string name="about_info_thanks_direwolf" translatable="false">Dire Wolf - </string>
    <string name="about_info_thanks_direwolf_text">TES Legends game</string>
    <string name="about_info_thanks_direwolf_link" translatable="false">https://legends.bethesda.net</string>
    <string name="about_info_thanks_cvh" translatable="false">CVH - </string>
    <string name="about_info_thanks_cvh_text">Arena Tier List</string>
    <string name="about_info_thanks_cvh_link" translatable="false">https://betweenthelanes.net/arena-tier-list</string>
    <string name="about_info_thanks_unity_studio">Devs of UnityStudio - </string>
    <string name="about_info_thanks_unity_studio_text" translatable="false">UnityStudio</string>
    <string name="about_info_thanks_unity_studio_link" translatable="false">https://github.com/Ungaminga/UnityStudio</string>
    <string name="about_info_thanks_translation_german" translatable="false">German translation - </string>
    <string name="about_info_thanks_translation_german_text" translatable="false">Ballaum</string>
    <string name="about_info_thanks_translation_italian" translatable="false">Italian translation - </string>
    <string name="about_info_thanks_translation_italian_text" translatable="false">Antonio Sampere</string>
    <string name="about_info_thanks_translation_russian" translatable="false">Russian translation - </string>
    <string name="about_info_thanks_translation_russian_text" translatable="false">Roman Chuvayev and WickedTroll</string>
    <string name="about_info_thanks_translation_french" translatable="false">French translation - </string>
    <string name="about_info_thanks_translation_french_text" translatable="false">Sebastien Gaud</string>
    <string name="about_twitter" translatable="false">Twitter</string>
    <string name="about_twitter_link" translatable="false">https://twitter.com/teslegendstrack</string>
    <string name="about_rate_app">Rate App</string>
    <string name="dialog_import_title">Import from Legends-Decks</string>
    <string name="dialog_import_text">Please do login and open your collection edit page</string>
    <string name="dialog_import_deck_text">Please do login and open my decks page</string>
    <string name="dialog_import_result_title">Collection Import</string>
    <string name="dialog_import_result_imported_text">Cards imported:</string>
    <string name="dialog_import_result_difference_text">Collection differences of Legends-Decks:</string>
    <string name="dialog_import_result_added">ADDED</string>
    <string name="dialog_import_result_updated">UPDATED</string>
    <string name="dialog_import_result_you_have">YOU HAVE</string>
    <string name="dialog_import_result_has_more">HAS MORE</string>
    <string name="dialog_import_legends_deck_link" translatable="false">https://www.legends-decks.com/collection-manager</string>
    <string name="dialog_import_legends_deck_main_link" translatable="false">https://www.legends-decks.com/#</string>
    <string name="new_deck_save_dialog_title">Deck Info</string>
    <string name="new_deck_save_dialog_name_label">Name</string>
    <string name="new_deck_save_dialog_type_label">Type</string>
    <string name="new_deck_save_dialog_patch_label" translatable="false">Patch</string>
    <string name="new_deck_save_dialog_public_label">Make deck public</string>
    <string name="new_match_dialog_title">I\'m playing with</string>
    <string name="new_match_dialog_class_label">Class</string>
    <string name="new_match_dialog_mode_label">Mode</string>
    <string name="new_match_dialog_deck_label">Deck</string>
    <string name="new_match_dialog_name_hint">Deck Name</string>
    <string name="article_news_category_all">All</string>
    <string name="article_news_category_announcements">Announcements</string>
    <string name="article_news_category_battle">Battle Tactics</string>
    <string name="article_news_category_forging">Forging Legends</string>
    <string name="article_news_category_imperial">Imperial Library</string>
    <string name="article_news_category_legendary">Legendary Beginnings</string>
    <string name="article_news_category_arena">The Arena District</string>
</resources>