<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/group_public"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_cards"
            android:title="@string/menu_cards" />

        <item
            android:id="@+id/menu_decks"
            android:title="@string/menu_decks" />

        <item
            android:id="@+id/menu_matches"
            android:title="@string/menu_matches"
            android:visible="false"
            tools:visible="true"
            android:enabled="false" />
    </group>

    <group
        android:id="@+id/group_tools"
        android:checkableBehavior="single"
        android:enabled="false">

        <item
            android:id="@+id/menu_arena"
            android:title="@string/menu_arena" />

        <item
            android:id="@+id/menu_season"
            android:title="@string/menu_season" />
    </group>

    <group
        android:checkableBehavior="single"
        android:enabled="false">

        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about" />

    </group>

</menu>