<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group
        android:id="@+id/group_public"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_cards"
            android:icon="@drawable/ic_cards"
            android:title="@string/menu_cards" />

        <item
            android:id="@+id/menu_decks"
            android:icon="@drawable/ic_decks"
            android:title="@string/menu_decks" />

        <item
            android:id="@+id/menu_matches"
            android:icon="@drawable/ic_matches"
            android:title="@string/menu_matches"
            android:visible="false"
            tools:visible="true" />
    </group>

    <group
        android:id="@+id/group_tools"
        android:checkableBehavior="single"
        android:enabled="false"
        android:visible="false"
        tools:visible="true">

        <item
            android:id="@+id/menu_arena"
            android:icon="@drawable/ic_mode_arena"
            android:title="@string/menu_arena" />

        <item
            android:id="@+id/menu_season"
            android:icon="@drawable/ic_season"
            android:title="@string/menu_season" />
    </group>

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/menu_donate"
            android:checkable="false"
            android:icon="@drawable/ic_ads"
            android:title="@string/menu_donate" />

        <item
            android:id="@+id/menu_about"
            android:checkable="false"
            android:icon="@drawable/ic_about"
            android:title="@string/menu_about" />

    </group>

</menu>