<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_public"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_cards"
            android:title="@string/menu_cards"/>

        <item
            android:id="@+id/menu_decks"
            android:title="@string/menu_decks"/>
    </group>

    <group
        android:id="@+id/group_user"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_collection"
            android:title="@string/menu_collection"/>

        <item
            android:id="@+id/menu_matches"
            android:title="@string/menu_matches"/>
    </group>

    <group
        android:id="@+id/group_tools"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_arena"
            android:title="@string/menu_arena"/>

        <item
            android:id="@+id/menu_season"
            android:title="@string/menu_season"/>
    </group>

    <group
        android:id="@+id/group_app"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_about"
            android:title="@string/menu_about"/>

        <item
            android:id="@+id/menu_logout"
            android:title="@string/menu_logout"/>
    </group>

</menu>