<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_ringtone_play"
        android:title="@string/menu_ringtone_play"
        android:visible="false"
        tools:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_ringtone_attack"
        android:title="@string/menu_ringtone_attack"
        android:visible="false"
        tools:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_ringtone_extra"
        android:title="@string/menu_ringtone_extra"
        android:visible="false"
        tools:visible="true"
        app:showAsAction="always" />

</menu>