<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_marginTop="@dimen/status_bar_height">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:paddingBottom="@dimen/default_margin">

        <TextView
            android:id="@+id/about_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/about_title"
            android:textSize="@dimen/font_large"
            android:textColor="@color/primary_text_dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/about_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_title"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/about_text"
            android:textAlignment="center"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_version_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_text"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/about_info_version"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_text"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/huge_margin"
            android:layout_toEndOf="@id/about_dialog_version_label"
            android:textSize="@dimen/font_medium"
            tools:text="0.3" />

        <TextView
            android:id="@+id/about_dialog_developer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_version_label"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_info_developer_label"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_developer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/about_dialog_developer_label"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_below="@id/about_dialog_version_label"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_info_developer"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_thanks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_developer_label"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_info_thanks_label"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_thanks_cvh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_thanks_label"
            android:layout_marginStart="@dimen/huge_margin"
            android:paddingStart="@dimen/huge_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_info_thanks_cvh"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_thanks_cvh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_thanks_label"
            android:layout_marginStart="@dimen/default_margin"
            android:textSize="@dimen/font_medium"
            android:layout_toEndOf="@id/about_dialog_thanks_cvh"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_info_thanks_cvh_text"
            android:textColor="@color/indigo_500" />

        <TextView
            android:id="@+id/about_dialog_thanks_direwolf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_thanks_cvh"
            android:layout_marginStart="@dimen/huge_margin"
            android:paddingStart="@dimen/huge_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/about_info_thanks_direwolf"
            android:textSize="@dimen/font_medium" />

        <TextView
            android:id="@+id/about_dialog_thanks_direwolf_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_thanks_cvh"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_toEndOf="@id/about_dialog_thanks_direwolf"
            android:layout_marginTop="@dimen/default_margin"
            android:textSize="@dimen/font_medium"
            android:text="@string/about_info_thanks_direwolf_text"
            android:textColor="@color/indigo_500" />

        <TextView
            android:id="@+id/about_dialog_text_bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/about_dialog_thanks_direwolf"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/about_text"
            android:textAlignment="center"
            android:textSize="@dimen/font_small" />

    </RelativeLayout>

</android.support.v7.widget.CardView>