<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin">

        <TextView
            android:id="@+id/new_deck_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/new_deck_save_dialog_title"
            android:textSize="@dimen/font_large"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_deck_dialog_nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_deck_dialog_title"
            android:layout_marginTop="@dimen/medium_margin"
            android:hint="@string/new_deck_save_dialog_name_label">

            <EditText
                android:id="@+id/new_deck_dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_deck_dialog_typeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_deck_dialog_nameLayout"
            android:layout_marginTop="@dimen/medium_margin"
            android:hint="@string/new_deck_save_dialog_type_label">

            <Spinner
                android:id="@+id/new_deck_dialog_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_deck_dialog_patchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_deck_dialog_typeLayout"
            android:layout_marginTop="@dimen/medium_margin"
            android:hint="@string/new_deck_save_dialog_patch_label">

            <Spinner
                android:id="@+id/new_deck_dialog_patch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />

        </android.support.design.widget.TextInputLayout>

        <CheckBox
            android:id="@+id/new_deck_dialog_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_deck_dialog_patchLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/new_deck_save_dialog_public_label" />

    </RelativeLayout>

</android.support.v7.widget.CardView>