<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/default_margin"
    app:cardElevation="@dimen/card_elevation"
    tools:layout_marginTop="@dimen/status_bar_height">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin">

        <TextView
            android:id="@+id/new_match_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/new_match_dialog_title"
            android:textSize="@dimen/font_large"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/new_match_dialog_class_label"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_title"
            android:layout_marginTop="@dimen/huge_margin"
            android:text="@string/new_match_dialog_class_label"
            android:textColor="@color/grey_500" />

        <Spinner
            android:id="@+id/new_match_dialog_class_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_class_label" />

        <TextView
            android:id="@+id/new_match_dialog_deck_label"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_class_spinner"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/new_match_dialog_deck_label"
            android:textColor="@color/grey_500" />

        <Spinner
            android:id="@+id/new_match_dialog_deck_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_deck_label"
            android:inputType="none" />

        <RelativeLayout
            android:id="@+id/new_match_dialog_deck_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_deck_spinner"
            android:layout_marginStart="@dimen/huge_margin"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/new_match_dialog_deck_name_label"
                style="@style/InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_deck_save_dialog_name_label"
                android:textColor="@color/grey_500" />

            <EditText
                android:id="@+id/new_match_dialog_deck_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_match_dialog_deck_name_label"
                android:hint="@string/new_match_dialog_name_hint"
                android:inputType="text"
                android:textColor="@color/primary_text_dark"
                android:textColorHint="@color/grey_400" />

            <TextView
                android:id="@+id/new_match_dialog_deck_type_label"
                style="@style/InputLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_match_dialog_deck_name"
                android:text="@string/new_deck_save_dialog_type_label"
                android:textColor="@color/grey_500" />

            <Spinner
                android:id="@+id/new_match_dialog_deck_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/new_match_dialog_deck_type_label"
                android:inputType="none" />

        </RelativeLayout>

        <TextView
            android:id="@+id/new_match_dialog_mode_label"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_deck_info"
            android:layout_marginTop="@dimen/default_margin"
            android:text="@string/new_match_dialog_mode_label"
            android:textColor="@color/grey_500" />

        <Spinner
            android:id="@+id/new_match_dialog_mode_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_match_dialog_mode_label"
            android:layout_marginBottom="@dimen/default_margin"
            android:inputType="none" />

    </RelativeLayout>

</android.support.v7.widget.CardView>